# vetis

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: build-php.yml  code-coverage.yml  rust.yml
.samoyed/: pre-commit
docs/: index.md  llms.txt  vetis-macros.md  vetis.md
examples/simple/: Cargo.toml
examples/simple/certs/: README.md
examples/simple/src/: main.rs
src/: config.rs  errors.rs  lib.rs
src/rt/: mod.rs
src/server/: config.rs  errors.rs  http.rs  mod.rs  quic.rs  tcp.rs  tls.rs  udp.rs
src/server/conn/tcp/: http.rs  mod.rs
src/server/conn/udp/: http.rs  mod.rs
src/server/virtual_host/: mod.rs
src/server/virtual_host/path/: file.rs  mod.rs
src/tests/: config.rs
vetis/: Cargo.toml  Dockerfile  Dockerfile.php  Dockerfile.ruby  README.md
vetis-asgi/: Cargo.toml
vetis-asgi/src/: lib.rs
vetis-core/: Cargo.toml
vetis-core/src/: lib.rs
vetis-core/src/interface/: mod.rs
vetis-fcgi/: Cargo.toml
vetis-fcgi/src/: lib.rs
vetis-macros/: Cargo.toml  README.md
vetis-macros/src/: lib.rs
vetis-macros/tests/: mod.rs
vetis-rack/: Cargo.toml
vetis-rack/src/: lib.rs
vetis-rsgi/: Cargo.toml
vetis-rsgi/src/: lib.rs
vetis-sapi/src/: lib.rs
vetis-scgi/: Cargo.toml
vetis-scgi/src/: lib.rs
vetis-wsgi/: Cargo.toml
vetis-wsgi/src/: callback.rs  lib.rs
vetis/src/: config.rs  errors.rs  lib.rs  main.rs
vetis/src/config/server/virtual_host/: mod.rs
vetis/src/config/server/virtual_host/path/: interface.rs  mod.rs  static_files.rs
vetis/src/server/: http.rs  mod.rs  path.rs  tls.rs  virtual_host.rs
vetis/src/server/conn/listener/: mod.rs  tcp.rs  udp.rs
vetis/src/server/virtual_host/: mod.rs
vetis/src/server/virtual_host/path/: mod.rs
vetis/src/server/virtual_host/path/auth/: basic_auth.rs  mod.rs
vetis/src/server/virtual_host/path/interface/: mod.rs
vetis/src/server/virtual_host/path/interface/asgi/: mod.rs
vetis/src/server/virtual_host/path/interface/php/: mod.rs
vetis/src/server/virtual_host/path/interface/python/: mod.rs
vetis/src/server/virtual_host/path/interface/python/asgi/: mod.rs
vetis/src/server/virtual_host/path/interface/python/wsgi/: mod.rs
vetis/src/server/virtual_host/path/interface/rack/: mod.rs
vetis/src/server/virtual_host/path/interface/rsgi/: mod.rs
vetis/src/server/virtual_host/path/interface/scgi/: mod.rs
vetis/src/server/virtual_host/path/interface/wsgi/: mod.rs
vetis/src/server/virtual_host/path/static_files/: mod.rs
vetis/src/tests/: config.rs  mod.rs  paths.rs  server.rs  tls.rs  virtual_host.rs
vetis/src/tests/paths/: reverse_proxy.rs  static_files.rs
