[package]
name = "simple"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
bytes = "1.11.0"
http-body-util = "0.1.3"
hyper = "1.8.1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"] }
vetis = { version = "0.1.0", path = "../..", features = ["http1", "tokio-rt", "tokio-rust-tls"], default-features = false }
