[package]
name = "simple"
version = "0.1.0"
edition = "2024"

[features]
default = ["tokio"]
tokio = ["tokio/rt-multi-thread", "tokio/macros"]
smol = ["smol-macros"]

[dependencies]
bytes = "1.11.1"
clap = { version = "4.5.59", features = ["derive"] }
deboa = { version = "0.1.0-beta.2", features = [
  "tokio-rt",
  "tokio-rust-tls",
  "http1",
], default-features = false }
env_logger = "0.11.9"
http-body-util = "0.1.3"
hyper = "1.8.1"
macro_rules_attribute = "0.2.2"
maplit = "1.0.2"
smol-macros = { version = "0.1.1", optional = true }
tokio = { version = "1.49.0", default-features = false, optional = true}
vetis = { version = "0.1.4-beta.1", path = "../../vetis", features = [
  "http1",
  "tokio-rt",
  "tokio-rust-tls",
  "static-files",
  "reverse-proxy"
], default-features = false }
